Account types not showing fix

--- a/app/wp-content/themes/prfwp/resources/assets/styles/acf/components/_account-types.scss
+++ b/app/wp-content/themes/prfwp/resources/assets/styles/acf/components/_account-types.scss
@@ -50,6 +50,7 @@
 
         @media #{$navbar_until_breakpoint} {
             margin-top: 12rem;
+            background-size: contain;
         }
 
         @media #{$xl} {
